--- a/src/components/bb-collection/bb-collection.css
+++ b/src/components/bb-collection/bb-collection.css
@@ -1,62 +1,74 @@
 :host {
   all: initial;
   display: block;
-  /*font-family: inherit;*/
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px steelblue;
-}
-
-form {
-  display: block;
+.header {
   margin: 1rem;
+  position: relative;
+  background-color: cornflowerblue;
+  border-radius: 0.5rem;
+  background-position: center center;
+  background-size: cover;
 }
 
-input[type="search"] {
-  display: block;
+.header-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  border-radius: 2rem;
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
-  margin: 0;
-  border: none;
-  background-color: #eee;
+  color: white;
+  text-align: center;
 }
 
-h1 {
-  margin: 1rem;
+.header-avatar {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 100%;
+  object-fit: cover;
+  margin: 0.5rem 1rem;
 }
 
-ul {
-  list-style-type: none;
-  margin: 1rem;
-  padding: 0;
+.search-form {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 50rem;
+  margin: 0.5rem;
 }
 
-li {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  min-width: 300px;
-  width: calc(100%/3);
+.search-form-item {
+  flex: 1 1 250px;
+  margin: 0.5rem;
 }
 
-li img {
-  display: block;
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 0.25rem;
-  box-shadow: 0 0 1rem rgba(0, 10, 20, 0.25)
-}
-
-li h3 {
+.search-select {
+  font-weight: 400;
   font-size: 1rem;
+  color: #eee;
+  opacity: 0.9;
+  appearance: none;
+  border: none;
+  background: rgba(200, 200, 200, 0.5);
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+);
+  background-position: calc(100% - 10px) center;
+  background-size: 10px 10px;
+  background-repeat: no-repeat;
+  outline: none;
+}
+
+.search-select:focus {
+  box-shadow: 0 0 0 2px lightskyblue;
+}
+
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.5rem;
+}
+
+.card-grid-item {
+  flex: 1 1 400px;
+  margin: 0.5rem;
 }
