--- a/src/components/bb-listing/bb-listing.css
+++ b/src/components/bb-listing/bb-listing.css
@@ -1,9 +1,12 @@
 :host {
-  --primary-font: inherit;
+  --base-font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
+  --heading-font-family: var(--base-font-family);
+  --alternate-font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+
 
   all: initial;
   display: block;
-  font: var(--primary-font);
+  font-family: var(--base-font-family);
 }
 
 .heading-container {
@@ -18,6 +21,28 @@
 .small-heading {
   display: block;
 }
+
+
+
+.title {
+  font-size: 1.75rem;
+  font-weight: 400;
+  margin: 0.5rem 0;
+}
+
+.summary {
+  font-family: var(--alternate-font-family);
+
+  margin: 0;
+
+  line-height: 1.85rem;
+  font-size: 1.3rem;
+  font-weight: 300;
+  font-style: italic;
+  color: rgb(114, 124, 134);
+
+}
+
 
 @media(min-width: 900px) {
   .heading-container {
@@ -34,7 +59,6 @@
     display: none;
   }
 
-
 }
 
 .hover-zoom {
@@ -50,36 +74,39 @@
 
 .specs {
   list-style: none;
-  margin: 3rem 2rem;
+  margin: 1rem;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  border-top: 2px solid #eee;
 }
 
 .specs li {
-  flex: auto;
-  width: 50%;
+  width: 100%;
+  flex: 300px;
   display: block;
   list-style: none;
   margin: 0 0;
   padding: 0.5rem 0;
   border-bottom: 1px solid #eee;
+  line-height: 1.5rem;
 }
+
+
 
 .specs li h3 {
-  display: inline;
-  font-size: 1rem;
-  font-weight: 600;
+  display: block;
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: #123;
   margin: 0;
-}
-
-.specs li h3::after {
-  content: ':';
-  margin-right: 1rem;
+  text-transform: uppercase;
 }
 
 .specs li span {
-  opacity: 0.75;
+  color: rgb(156, 169, 182);
+  font-size: 1.2rem;
+  font-weight: 300;
 }
 
 
@@ -90,4 +117,66 @@
 
 .gallery-thumb:hover {
   opacity: 1.0;
+}
+
+
+.media-flex {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.9rem;
+  overflow: hidden;
+}
+
+.media-flex div {
+  display: flex;
+  flex: 1 1;
+  box-sizing: border-box;
+  margin: 0.1rem;
+
+}
+
+.media-flex img {
+  display: flex;
+  flex: 1 1;
+  max-height: 10rem;
+  min-width: 20vw;
+  height: auto;
+  object-fit: cover;
+  object-position: center center;
+  border-radius: 0.15rem;
+}
+
+
+
+.spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateZ(0);
+  }
+
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+
+.contact-button {
+  display: flex;
+  width: 100%;
+  appearance: none;
+  outline: none;
+  padding: 0;
+  margin: 1rem 0 0 0;
+  background: rgb(245, 245, 245);
+  border-radius: 0.25rem;
+  border: 1px solid #eee;
+  color: #000;
+  cursor: pointer;
+}
+
+.contact-button:hover {
+  background: rgb(207, 250, 253);
 }
