--- a/src/components/bb-listing/bb-listing.css
+++ b/src/components/bb-listing/bb-listing.css
@@ -132,7 +132,6 @@
   flex: 1 1;
   box-sizing: border-box;
   margin: 0.1rem;
-
 }
 
 .media-flex img {
@@ -150,6 +149,46 @@
 
 .spin {
   animation: spin 1s linear infinite;
+}
+
+.markdown {
+  columns: 2 20rem;
+  /* Fix chrome column bug */
+  transform: translateZ(0);
+}
+
+.markdown p {
+  opacity: 0.75;
+  font-size: 0.9rem;
+  margin: 0 0 1rem 0;
+}
+
+.markdown li {
+  display: block;
+  opacity: 0.75;
+  font-size: 0.9rem;
+  list-style: " – ";
+  list-style-position: outside;
+  break-inside: avoid;
+}
+
+.markdown h3 {
+  margin: 1rem 0;
+  font-size: 1.25rem;
+  font-weight: 500;
+  column-span: all;
+  break-inside: avoid;
+}
+
+
+.markdown h4 {
+  margin: 0.25rem 0;
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  opacity: 0.85;
+  column-span: all;
+  break-inside: avoid;
 }
 
 @keyframes spin {
@@ -173,10 +212,53 @@
   background: rgb(245, 245, 245);
   border-radius: 0.25rem;
   border: 1px solid #eee;
-  color: #000;
+  color: #123;
   cursor: pointer;
 }
 
 .contact-button:hover {
-  background: rgb(207, 250, 253);
+  background: rgb(173, 216, 255);
+  border: 1px solid rgb(139, 199, 255);
+}
+
+
+.contact-form {
+  max-width: 40rem;
+  margin: auto;
+  padding: 1rem;
+}
+
+.contact-form textarea,
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form input[type="telephone"] {
+  display: block;
+  border: 1px solid #ccc;
+  color: #666;
+  background-color: white;
+  border-radius: 1px;
+  font-size: 1rem;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.contact-form button {
+  display: block;
+  width: 100%;
+  appearance: none;
+  padding: 1rem 0.5rem;
+  margin: 0;
+  background: rgb(245, 245, 245);
+  border-radius: 1px;
+  border: 1px solid #eee;
+  color: #123;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.contact-form button:hover {
+  background: rgb(173, 216, 255);
+  border: 1px solid rgb(139, 199, 255);
 }
