--- a/src/components/bb-profile/bb-profile.css
+++ b/src/components/bb-profile/bb-profile.css
@@ -18,6 +18,11 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: white;
   text-align: center;
 }
@@ -36,15 +41,12 @@
   margin: 0.5rem;
 }
 
-.search-form-item {
+.search-form-select {
   flex: 1 1 250px;
   margin: 0.5rem;
-}
-
-.search-select {
   font-weight: 400;
   font-size: 1rem;
-  color: #eee;
+  color: #444;
   opacity: 0.9;
   appearance: none;
   border: none;
@@ -58,8 +60,23 @@
   outline: none;
 }
 
-.search-select:focus {
+.search-form-select:focus {
   box-shadow: 0 0 0 2px lightskyblue;
+}
+
+.search-form-switch {
+  flex: 0 0 40px;
+  margin: 0.5rem;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #444;
+  opacity: 0.9;
+  appearance: none;
+  border: none;
+  background: rgba(200, 200, 200, 0.5);
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  outline: none;
 }
 
 .card-grid {
