--- a/src/components/bb-collection/bb-collection.css
+++ b/src/components/bb-collection/bb-collection.css
@@ -16,11 +16,36 @@
 
 .header-overlay {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   color: white;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.header-text {
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header-text h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+  margin: 0;
+}
+
+.header-text p {
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+  margin: 0;
 }
 
 .header-avatar {
@@ -30,13 +55,6 @@
   object-fit: cover;
   margin: 0.5rem 1rem;
 }
-
-.header h1 {
-  font-size: 2.5rem;
-  font-weight: 600;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
-}
-
 
 
 .search-form {
