--- a/src/components/bb-collection/bb-collection.css
+++ b/src/components/bb-collection/bb-collection.css
@@ -71,6 +71,7 @@
   color: #222;
   opacity: 0.9;
   appearance: none;
+  -webkit-appearance: none;
   border: none;
   background: rgba(200, 200, 200, 0.8);
   border-radius: var(--bb-border-radius);
@@ -94,6 +95,7 @@
   color: #444;
   opacity: 0.9;
   appearance: none;
+  -webkit-appearance: none;
   border: none;
   background: rgba(200, 200, 200, 0.5);
   border-radius: 0.25rem;
@@ -134,12 +136,13 @@
   flex: 0 1 200px;
   margin: 0;
   padding: 0.25rem 0.5rem;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 1rem;
-  color: #444;
+  color: #666;
   opacity: 0.9;
   appearance: none;
-  border: none;
+  -webkit-appearance: none;
+  border: 1px solid #aaa;
   background: rgba(243, 243, 243, 0.8);
   border-radius: var(--bb-border-radius);
   background-image: url('https://api.iconify.design/ls:sort.svg?color=gray');
