--- a/src/components/bb-profile/bb-profile.css
+++ b/src/components/bb-profile/bb-profile.css
@@ -29,11 +29,27 @@
 }
 
 .header-avatar {
-  width: 6rem;
-  height: 6rem;
+  flex: none;
+  width: 9rem;
+  height: 9rem;
   border-radius: 100%;
+  border: 3px solid white;
   object-fit: cover;
-  margin: 0.5rem 1rem;
+  margin: 0 0 0 2rem;
+  position: relative;
+  margin-top: -5rem;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.27);
+}
+
+.link-button {
+  text-decoration: none;
+  color: inherit;
+  display: inline-flex;
+  align-items: center;
+}
+
+.link-button i {
+  margin-right: 0.25rem;
 }
 
 .collection-header {
@@ -68,6 +84,7 @@
   color: #444;
   opacity: 0.9;
   appearance: none;
+  -webkit-appearance: none;
   border: none;
   background: rgba(200, 200, 200, 0.5);
   border-radius: var(--bb-border-radius);
@@ -105,6 +122,74 @@
 }
 
 .card-grid-item {
-  flex: 1 1 400px;
+  flex: 1 1 300px;
   margin: 0.5rem;
+}
+
+
+.contact-button {
+  flex: auto;
+  margin: 0.25rem;
+  display: block;
+  appearance: none;
+  outline: none;
+  padding: 0;
+  background: rgb(245, 245, 245);
+  border-radius: 0.25rem;
+  border: 1px solid #eee;
+  color: #123;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 0.25rem 1rem;
+  text-decoration: none;
+
+}
+
+.contact-button:hover {
+  background: rgb(173, 216, 255);
+  border: 1px solid rgb(139, 199, 255);
+}
+
+
+.contact-form {
+  max-width: 40rem;
+  margin: auto;
+  padding: 1rem;
+}
+
+.contact-form textarea,
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form input[type="telephone"] {
+  display: block;
+  border: 1px solid #ccc;
+  color: #666;
+  background-color: white;
+  border-radius: 1px;
+  font-size: 1rem;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.contact-form button {
+  display: block;
+  width: 100%;
+  appearance: none;
+  padding: 1rem 0.5rem;
+  margin: 0;
+  background: rgb(245, 245, 245);
+  border-radius: 1px;
+  border: 1px solid #eee;
+  color: #123;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.contact-form button:hover {
+  background: rgb(173, 216, 255);
+  border: 1px solid rgb(139, 199, 255);
 }
