--- a/src/components/media/media.css
+++ b/src/components/media/media.css
@@ -3,8 +3,10 @@
 }
 
 .display-grid {
+  overflow: hidden;
   display: grid;
   margin: 1rem 0;
+  padding-bottom: 1rem;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 2%;
   grid-row-gap: 2%;
@@ -23,10 +25,10 @@
 
 .display-grid-image {
   position: absolute;
+  display: block;
   top: 0;
   left: 0;
   border-radius: var(--bb-border-radius);
-  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
