--- a/src/components/bb-profile/bb-profile.css
+++ b/src/components/bb-profile/bb-profile.css
@@ -41,6 +41,17 @@
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.27);
 }
 
+.full-avatar {
+  flex: none;
+  width: 9rem;
+  height: 9rem;
+  border-radius: 100%;
+  border: 3px solid white;
+  object-fit: cover;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.27);
+
+}
+
 .link-button {
   text-decoration: none;
   color: inherit;
